[package]
name = "livestream-dl"
version = "0.2.2"
edition = "2021"
build = "build.rs"
license = "GPL-3.0"
readme = "README.md"
description = "An m3u8 livestream downloader"
repository = "https://github.com/evanc577/livestream-dl"
categories = ["command-line-utilities", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
fern = { version = "0.6", features = ["colored"] }
futures = "0.3"
isolang = "2.1"
log = "0.4"
m3u8-rs = "4.0"
oxilangtag = "0.1"
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
tokio = { version = "1.19", features = ["full"] }
url = "2.2"

[build-dependencies]
clap = { version = "3.2", features = ["derive"] }
clap_complete = "3.2"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
