[package]
name = "livestream-dl"
version = "0.4.0"
edition = "2021"
build = "build.rs"
license = "GPL-3.0"
readme = "README.md"
description = "An m3u8 livestream downloader"
repository = "https://github.com/evanc577/livestream-dl"
categories = ["command-line-utilities", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
ansi_term = "0.12"
anyhow = "1.0"
cbc = { version = "0.1", features = ["std"] }
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
hex = "0.4"
isolang = "2.1"
log = "0.4"
m3u8-rs = "4.0"
oxilangtag = "0.1"
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "json", "env-filter"] }
url = "2.2"

[build-dependencies]
clap = { version = "3.2", features = ["derive"], default-features = false }
clap_complete = { version = "3.2", default-features = false }
reqwest = { version = "0.11", default-features = false }
